; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_meta.c_cmd_meta_init.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_meta.c_cmd_meta_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@C = common dso_local global i32 0, align 4
@CC = common dso_local global i32 0, align 4
@CS = common dso_local global i32 0, align 4
@Cs = common dso_local global i32 0, align 4
@Cvb = common dso_local global i32 0, align 4
@Cvr = common dso_local global i32 0, align 4
@Cvs = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @cmd_meta_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cmd_meta_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i32, i32* @C, align 4
  %5 = call i32 @DEFINE_CMD_DESCRIPTOR(i32* %3, i32 %4)
  %6 = load i32*, i32** %2, align 8
  %7 = load i32, i32* @CC, align 4
  %8 = call i32 @DEFINE_CMD_DESCRIPTOR(i32* %6, i32 %7)
  %9 = load i32*, i32** %2, align 8
  %10 = load i32, i32* @CS, align 4
  %11 = call i32 @DEFINE_CMD_DESCRIPTOR(i32* %9, i32 %10)
  %12 = load i32*, i32** %2, align 8
  %13 = load i32, i32* @Cs, align 4
  %14 = call i32 @DEFINE_CMD_DESCRIPTOR(i32* %12, i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = load i32, i32* @Cvb, align 4
  %17 = call i32 @DEFINE_CMD_DESCRIPTOR(i32* %15, i32 %16)
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* @Cvr, align 4
  %20 = call i32 @DEFINE_CMD_DESCRIPTOR(i32* %18, i32 %19)
  %21 = load i32*, i32** %2, align 8
  %22 = load i32, i32* @Cvs, align 4
  %23 = call i32 @DEFINE_CMD_DESCRIPTOR(i32* %21, i32 %22)
  ret void
}

declare dso_local i32 @DEFINE_CMD_DESCRIPTOR(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
